minor update to parse_data ipynb file

--- a/code/Parse_xml_data.ipynb
+++ b/code/Parse_xml_data.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Contents**\n",
+    "\n",
+    "1. read raw XML data from online database at saramusik.org\n",
+    "2. parse text content and metadata from XML data and store everything in a dataframe. Also the text content of each document is stored in a separate text file.\n",
+    "3. visualize and cleanup metadata fields\n",
+    "4. save dataframe of the parsed data and store in a pickle file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** re-run this file every once in a while because remote data is constantly being updated"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -38,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read and parse XML data"
+    "## Read and parse raw XML data"
    ]
   },
   {
@@ -5203,34 +5222,6 @@
     "    with open(DOC_PARSED_DATA_FILEPATH, 'wb') as f:\n",
     "        pickle.dump(doc_data_df[selected_fields], f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
