added an explanatory overview at the beginning of the text preprocessing script.

--- a/code/Preprocess_text_data.ipynb
+++ b/code/Preprocess_text_data.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Objective**\n",
+    "\n",
+    "This script reads raw text content of the documents from a pickle file and cleans up this text using standard operations specific to the **Arabic** language and to this corpus. Pre-exploration of the corpus helps determine those specificities.\n",
+    "\n",
+    "The preprocessing pipeline is as follows:\n",
+    "\n",
+    "1. Orthographic normalization (remove diacritic marks and tatwil character; normalize different forms of alif character)\n",
+    "2. Tokenization (remove non-word characters and convert to sequence of words)\n",
+    "3. Light stemming based on common prefixes and suffixes (**TO DO**)\n",
+    "4. remove stopwords\n",
+    "5. Convert to word ngrams"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -240,9 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploratory data analysis\n",
-    "\n",
-    "Stopped here 2/26/2020"
+    "## Exploratory data analysis"
    ]
   },
   {
@@ -1544,8 +1559,8 @@
     "\n",
     "processing pipeline:\n",
     "\n",
-    "1. Orthographic normalization (remove diacritic marks; tatwil; normalize alif character; )\n",
-    "2. Tokenization (remove non-word characters and convert to sequence of words ...]\n",
+    "1. Orthographic normalization (remove diacritic marks and tatwil character; normalize different forms of alif character)\n",
+    "2. Tokenization (remove non-word characters and convert to sequence of words)\n",
     "3. Light stemming based on common prefixes and suffixes (**TO DO**)\n",
     "4. remove stopwords\n",
     "5. Convert to word ngrams"
